[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
litesvm = "0.7.0"
solana-client = "2.2.0"
solana-sdk = "2.2.0"
tokio = "1.47.1"

[[example]]
name = "client"
path = "examples/client.rs"

