[workspace]
resolver = "2"
members = [
    "client",
    "program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
borsh = "1.5.7"
bytemuck = { version = "1.23.2", features = ["derive"] }
litesvm = "0.6.1"
solana-client = "2.2.0"
solana-program = "2.2.0"
solana-sdk = "2.2.0"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
tokio = "1.47.1"
