[package]
name = "deque-client"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
deque = { path = "../program", features = ["no-entrypoint"] }
litesvm = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
