[package]
name = "deque-client"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
deque = { path = "../program", features = ["no-entrypoint"] }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
litesvm = { workspace = true }
tokio = { workspace = true }
